syntax = "proto3";

package proto;

import "common.proto";

option go_package = "github.com/eyanshu1997/tunnlrX/common/proto;proto";

// ConfigService is the main service that the server will implement for config sharing
service ConfigService {
  // RegisterClient is used to register a new client to the server
  rpc RegisterClient (RegisterClientRequest) returns (RegisterClientResponse);
  // ListClients is used to list all the clients registered to the server
  rpc ListClients (ListClientsRequest) returns (ListClientsResponse);
  // ListTunnels is used to list all the tunnels registered to the server
  rpc ListTunnels (ListTunnelsRequest) returns (ListTunnelsResponse);
}

message RegisterClientRequest {
  string name = 1;
  string secret_key = 2;
}

message RegisterClientResponse {
  uint32 id = 1;
}

message ListClientsRequest {}

message ListClientsResponse {
  repeated Client clients = 1;
}

message ListTunnelsRequest {
  // optional field for filter
  uint32 client_id = 1;
}

message ListTunnelsResponse {
  repeated Tunnel tunnels = 1;
}